[project]
name = "mini-matching-engine"
version = "0.1.0"
description = "Matching engine demo"
authors = [
    {name = "OggyB",email = "oguzhanbudak39@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "nats-py (>=2.11.0,<3.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-core (>=2.23.4,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sortedcontainers (>=2.4.0,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "common", from = "src" },
    { include = "engine", from = "src" },
    { include = "pusher", from = "src" }
]

